@@ -618,7 +618,7 @@ class BuildEnvironment:
         self.note_citations_from(docname, doctree)
         self.build_toc_from(docname, doctree)
 
-        # store time of reading, used to find outdated files
+        # store time of build, for outdated files detection
         self.all_docs[docname] = time.time()
 
         if app:
