@@ -89,6 +89,13 @@ Release 1.0 (in development)
 Release 0.6.5 (in development)
 ==============================
 
+* #345: Fix cropping of sidebar scroll bar with ``stickysidebar``
+  option of the default theme.
+
+* #341: Always generate UNIX newlines in the quickstart Makefile.
+
+* #338: Fix running with ``-C`` under Windows.
+
 * In autodoc, allow customizing the signature of an object where
   the built-in mechanism fails.
 
